<?xml version="1.0"?>
<package format="2">
  <name>abb_irb4600_60_205_moveit_config</name>
  <version>0.0.1</version>
  <description>
    <p>
      MoveIt package for the ABB IRB 4600-60/205.
    </p>
  </description>
  <maintainer email="keerthana.manivannan@gmail.com">Keerthana Manivannan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_irb4600_support</exec_depend>
  <exec_depend>industrial_robot_simulator</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
